# QtStuffs

./: log_linux.txt  log_windows.txt
GeoemtryRenderer/: Compositor.qml  OffscreenRenderTarget.qml  OverlappingTriangles.qml  compositor.frag  compositor.vert  custom-mesh-update-data-qml.qrc  main.cpp  main.qml  qt3dcustommesh.pro  simpleColor.frag  simpleColor.vert
Qt5WorkingExample/QtSupportQmake/: Heightmap.cpp  Heightmap.h  PointGrid.h  QtSupportQmake.pro  RenderEntity.qml  RenderScene.qml  RenderViewer.qml  RoughnessCamera3DController.cpp  RoughnessCamera3DController.h  RoughnessGeometry.cpp  RoughnessGeometry.h  RoughnessMapMaterial.qml  RoughnessTextureImage.h  main.cpp  main.qml  qml.qrc
Qt5WorkingExample/QtSupportQmake/Shaders/gl3/: roughnessMap.vert
Qt5WorkingExample/QtSupportQmake/Shaders/gl45/: roughnessMap.frag  roughnessMap.vert
QtSupport6Cmake/: CMakeLists.txt  Main.qml  PointGrid.cpp  PointGrid.h  RenderEntity.qml  RenderScene.qml  RenderViewer.qml  RoughnessCamera3DController.cpp  RoughnessGeometry.cpp  RoughnessGeometry.h  RoughnessMapMaterial.qml  RoughnessTextureImage.cpp  main.cpp
QtSupport6Cmake/Shaders/gl3/: roughnessMap.frag
